[project]
name = "disclose-mcp-server"
version = "0.1.0"
description = "MCP server for querying merchant disclosure signals via the Disclose Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
